# cognition

./: Claude.md  CognitiveVibeCoding.MD  INSTRUMENTAL-REASONING-EMERGENCE.md  INSTRUMENTAL.MD  META-COGNITION-PLAN.md  MonetizationSuperIntelligence.md  Money  SELF-REFLEXION.md  UPP_Fixed.lean  isomorphism_broker.md  meta-intelligent.txt  patents.json  readme.md  reasoning_patents.md  upp.lean
agents/: US10540601B2_agent.md  US10839302B2_agent.md  US11157804B2_agent.md  US11205103B2_agent.md  US11250318B2_agent.md  US11392845B2_agent.md
architectures/: .$v1.xml.bkp  .$v1.xml.dtmp  ai_system_diagram.xml  cognition.xml  graph.xml  v1.xml
infra/: ADK_KUBERAY.md  ray_agents.py  readme.md
ontology/agents_graph/: Readme.md
prompts/: ReasoningAgents.md  v1.json  v2.json
src/: README.md  cli.py  config.py  main.py  pyproject.toml  setup.cfg
src/agents/: arbiter.py  archivist.py  executor.py  learner.py  planner.py  reflector.py  verifier.py
src/core/: dag.py  memory.py  reduction.py  tot.py
src/models/: embeddings.py  heuristics.py
src/ray/: main.py
src/utils/: logging.py  metrics.py
