[tool.poetry]
name = "agentic-cognition-mas"
version = "0.1.0"
description = "Meta-Agentic Cognitive Architecture for Post-Agentic AI Systems"
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
# Add other dependencies here, e.g.:
# numpy = "^1.21"
# pandas = "^1.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
# Add other development dependencies here, e.g.:
# black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"