[metadata]
name = agentic-cognition-mas
version = 0.1.0
description = Meta-Agentic Cognitive Architecture for Post-Agentic AI Systems
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/agentic-cognition-mas
license = MIT

[options]
packages = find:
package_dir =
    = src
install_requires =
    numpy
    scipy
    torch
    # Add other dependencies here

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    agentic-cognition-mas = agentic_cognition_mas.main:main

[options.extras_require]
testing =
    pytest
    pytest-cov
    # Add other testing dependencies here

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = *Tests
python_functions = test_*